examples/errors/undeclared_method.olang

Program: Main(1.1, 1.2)


class A is
    method abc() : Integer is
        var a: Integer
        return a
    end
end

class B extends A is
    this () is
        var b: Real()
    end
end

class Main is
    this() is
        var a : B
        a.cddsf()
    end
end